--- a/maintenance/maintenance.css
+++ b/maintenance/maintenance.css
@@ -1,4 +1,7 @@
 .maintenance_list {
   padding: 30px;
-  background-color: #a4c3fd;
+  background-color: lightblue;
+  border: 0;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
