--- a/operations/operations.css
+++ b/operations/operations.css
@@ -1,7 +1,3 @@
-/*#new_tasks {*/
-/*  border: #727272;*/
-/*  border-radius: 5px;*/
-/*}*/
 
 .operations-list {
   padding: 30px;
@@ -31,6 +27,19 @@
   color: whitesmoke;
   text-align: center;
 }
+/*Loan and Lend Modal*/
+#transactionID{}
+#organisationID{
+  margin-top: -95px;
+  margin-left: 240px;
+}
+#capacityID{}
+#loanPriorityID{
+  margin-top: -95px;
+  margin-left: 240px;
+}
+
+
 #viewReports {
   padding: 30px;
   font-stretch: expanded;
@@ -81,8 +90,8 @@ text-align: center;
 }
 
 .vibrate-2 {
-  -webkit-animation: vibrate-2 0.3s linear infinite both;
-  animation: vibrate-2 0.3s linear infinite both;
+  -webkit-animation: vibrate-2 2s linear infinite both;
+  animation: vibrate-2 2s linear infinite both;
 }
 @-webkit-keyframes vibrate-2 {
   0% {
@@ -136,3 +145,5 @@ text-align: center;
     transform: translate(0);
   }
 }
+
+
