--- a/home/home.css
+++ b/home/home.css
@@ -8,3 +8,16 @@
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+#viewBowserInfo{
+  padding: 30px;
+  font-stretch: expanded;
+  background-color: cornflowerblue;
+  border: 0;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+#reportTxt{
+  color: whitesmoke;
+  text-align: center;
+}
