--- a/operations/operations.css
+++ b/operations/operations.css
@@ -257,3 +257,9 @@ select{
   }
 }
 
+@media only screen and (max-width: 415px) {
+  #navTitle {
+    margin-left: -250px;
+    font-size: 25px;
+  }
+}
