--- a/operations/operations.css
+++ b/operations/operations.css
@@ -97,15 +97,27 @@
 }
 
 #viewMap{
-  padding: 30px;
+  padding: 20px;
   font-stretch: expanded;
   background-color: lightblue;
   border: 0;
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+#taskAllocation{
+  padding: 30px;
+  font-stretch: expanded;
+  background-color: cadetblue;
+  border: 0;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  color: white;
+}
 
-
+#insertButton{
+  text-align: right;
+  margin-top: -45px;
+}
 #viewLoanBowser{
   height: 85px;
   padding: 30px;
@@ -177,19 +189,17 @@ select{
   width: 150px;
 }
 #maintenanceID{
-  margin-left: 280px;
-  margin-top: -135px;
+  margin-left: 300px;
+  margin-top: -120px;
 }
 #taskID{
-  margin-top: -50px;
+  margin-top: 20px;
 }
 #priorityID{
-  margin-left: 280px;
-  margin-top: -110px;
-
+  margin-left: 300px;
+  margin-top: -95px;
 }
 #dateID{
-  margin-top: -35px;
 }
 #formID{}
 #allocateSubmitID{
