* maps geolocate. Ops map marker needs fix * notifications based on area ID * db schema update - colour coded notifications - amendments for auto tests - update to operations google map

--- a/home/home.css
+++ b/home/home.css
@@ -53,6 +53,14 @@
   text-align: center;
 }
 
+.select{
+  width: 150px;
+}
+#registerAccountSubmit{
+  margin-left: 320px;
+  margin-top: -75px
+}
+
 
 /*Button vibrate*/
 .vibrate-2 {
