--- a/global/global.css
+++ b/global/global.css
@@ -118,7 +118,7 @@ body {
   background-color: rgb(240, 240, 240);
   border-radius: 5px;
   padding: 15px;
-  margin-top: -20px;
+  margin-top: -35px;
 }
 /* container */
 .container {
@@ -174,6 +174,12 @@ a:active {
 
 #map {
   height: 400px; /*height set*/
+}
+.mapDiv{
+  padding: 5px;
+  border: 0;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 textarea {
