--- a/operations/operations.css
+++ b/operations/operations.css
@@ -155,6 +155,15 @@
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+#viewReportHeatMap{
+  height: 65px;
+  padding: 20px;
+  font-stretch: expanded;
+  background-color: dodgerblue;
+  border: 0;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
 
 /*Allocate Tasks*/
