--- a/bowsers/bowsers.css
+++ b/bowsers/bowsers.css
@@ -22,12 +22,21 @@
 #maint-table {
         border-collapse: separate;
         border-spacing: 0 15px;
+}
+
+#maint-table th{
+	color: white;
+	background-color: #0d6efd;
+}
+#maint-table th:nth-child(1){
+        color: white;
+		border-radius: .25rem 0 0 .25rem;
       }
 
-#maint-table th {
-        background-color: #0d6efd;
+#maint-table th:nth-child(6){
         color: white;
-      }
+		border-radius: 0 .25rem .25rem 0;
+}
 
 #maint-table th, #maint-table td {
         width: 150px;
