--- a/operations/operations.css
+++ b/operations/operations.css
@@ -19,13 +19,17 @@
 
 /*User details and buttons*/
 #text_area {
-  height: 100px;
+  height: 200px;
   padding: 20px;
   background-color: lightblue;
   border: 0;
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+#bowserStock{
+text-align: center;
+}
+
 #requestAlerts{
   padding: 30px;
   background-color: lightblue;
