--- a/maintenance/maintenance.css
+++ b/maintenance/maintenance.css
@@ -62,6 +62,7 @@ font-size: 25px;
   border-radius: 5px;
   font-size: medium;
   color: white;
+  height: 60px;
 }
 
 #broken{
@@ -71,4 +72,5 @@ font-size: 25px;
   border-radius: 5px;
   font-size: medium;
   color: white;
+  height: 60px;
 }
